css fix page flicker header

--- a/www-root/content/css/decred-v5.css
+++ b/www-root/content/css/decred-v5.css
@@ -2096,7 +2096,7 @@ body {
 .bg-illustration {
   position: relative;
   overflow: hidden;
-  width: calc(50% + 80px);
+  width: calc(50% - 80px);
   height: 100vh;
   background-image: url('../images/front-bg-anim_.gif'), -webkit-linear-gradient(270deg, #091440, #091440);
   background-image: url('../images/front-bg-anim_.gif'), linear-gradient(180deg, #091440, #091440);
